--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Galaxy → Solar System → Earth Map</title>
+    <title>Galaxy → Solar → Earth Map</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     <canvas id="galaxy"></canvas>
-
-    <!-- Modal hệ Mặt Trời -->
     <div id="solarModal" class="modal">
       <div class="modal-content">
         <button id="closeModal" class="btn">✖</button>
@@ -16,7 +15,6 @@
         <canvas id="solarCanvas"></canvas>
       </div>
     </div>
-
     <script src="main.js"></script>
   </body>
 </html>
